fix: update windows scrollbar style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,17 @@
-body.olares-windows ::-webkit-scrollbar {
-    width: 0 !important;
-    height: 0 !important;
+body.olares-windows {
+    ::-webkit-scrollbar {
+        width: 6px;
+        height: 8px;
+        background-color: rgba(255, 255, 255, 0);
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background-color: #bcbdbe;
+        border-radius: 999px;
+    }
+    ::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, 0);
+    }
 }
+
+
